--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "framer-motion": "^11.13.1",
     "googleapis": "^148.0.0",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.453.0",
-    "memorystore": "^1.6.7",
+    "lucide-react": "^0.462.0",
+    "mailgun.js": "^10.2.3",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.5",
