--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -18,49 +18,49 @@
   ],
   "icons": [
     {
-      "src": "/icon-72x72.png",
+      "src": "/icon-72x72.png?v=3",
       "sizes": "72x72",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icon-96x96.png",
+      "src": "/icon-96x96.png?v=3",
       "sizes": "96x96",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icon-128x128.png",
+      "src": "/icon-128x128.png?v=3",
       "sizes": "128x128",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icon-144x144.png",
+      "src": "/icon-144x144.png?v=3",
       "sizes": "144x144",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icon-152x152.png",
+      "src": "/icon-152x152.png?v=3",
       "sizes": "152x152",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icon-192x192.png",
+      "src": "/icon-192x192.png?v=3",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icon-384x384.png",
+      "src": "/icon-384x384.png?v=3",
       "sizes": "384x384",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/icon-512x512.png?v=3",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable any"
