Add Kakao Alimtalk notification service as alternative to PWA push

--- a/.env
+++ b/.env
@@ -1,2 +1,11 @@
 GMAIL_USER=flowerpanty@gmail.com
 GMAIL_APP_PASSWORD=uehwmjkpmqnpfsuv
+
+# 카카오톡 알림톡 설정 (선택사항 - 설정하지 않으면 비활성화됨)
+# 카카오 비즈니스 채널: https://center-pf.kakao.com
+# 카카오 개발자: https://developers.kakao.com
+# KAKAO_REST_API_KEY=your_rest_api_key_here
+# KAKAO_SENDER_KEY=your_sender_key_here
+# KAKAO_ADMIN_PHONE=01012345678
+# KAKAO_TEMPLATE_ADMIN=template_code_admin
+# KAKAO_TEMPLATE_CUSTOMER=template_code_customer
