Feature: 견적서 PNG 이미지 다운로드 기능 추가
- html2canvas 라이브러리 추가
- 견적서 이미지 템플릿 컴포넌트 생성 (quote-image-template.tsx)
- order-detail-modal에 이미지 다운로드 버튼 추가
- 기존 Excel 다운로드 기능 유지
- 고해상도(scale: 2) PNG 출력

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
     "googleapis": "^148.0.0",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "mailgun.js": "^10.2.3",
